---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate --write
```

## `biome.json`

```json
{
  "root": false,
  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": false
  },
  "files": {
    "ignoreUnknown": true,
    "includes": [
      "**",
      "!**/website/.next/**",
      "!**/website/.pages/**",
      "!**/*.css"
    ]
  },
  "assist": { "actions": { "source": { "organizeImports": "on" } } },
  "formatter": {
    "enabled": true,
    "indentStyle": "space"
  },
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "recommended",
      "security": {
        "noDangerouslySetInnerHtml": "off"
      },
      "a11y": {
        "noSvgWithoutTitle": "off",
        "useButtonType": "off",
        "useAnchorContent": "off",
        "useValidAnchor": "off",
        "useKeyWithClickEvents": "off",
        "noAutofocus": "off",
        "noLabelWithoutControl": "off",
        "useSemanticElements": "off",
        "useFocusableInteractive": "off"
      },
      "suspicious": {
        "noExplicitAny": "off",
        "noShadowRestrictedNames": "off",
        "noConfusingVoidType": "off",
        "noArrayIndexKey": "off",
        "noAssignInExpressions": "off"
      },
      "correctness": {
        "useExhaustiveDependencies": "off",
        "useJsxKeyInIterable": "off"
      },
      "style": {
        "noParameterAssign": "off",
        "noUnusedTemplateLiteral": "off",
        "noNonNullAssertion": "off",
        "noUselessElse": "off"
      }
    }
  }
}
```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration successfully migrated.
  

```
